<resources>
    <string name="app_name">Gibbr Fill</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_text_fill">TextFillActivity</string>
    <string name="fill_words">Fill in the words to complete the story!</string>
    <string name="all_words_filled">All words have been entered. Click on the button to show story.</string>
    <string name="show_story">Show story</string>
    <string name="next">Next</string>
    <string name="login_activity">Login Activity</string>
    <string name="auto_text_complete">Auto text complete</string>
    <string name="login_caps">LOGIN</string>
    <string name="register_caps">REGISTER</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="ok">OK</string>
    <string name="enter_month">Enter month</string>
    <string name="empty_field">Field cannot be empty</string>
</resources>
