<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    tools:context="com.aj.ayush.gibbr_fill.LoginActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/register_cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="56dp">
    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/login_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="#ffffff"
            app:fabSize="mini"
            android:tint="@color/colorAccent"
            android:src="@drawable/cross_icon" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/register_caps"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="26sp"/>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/RegisterTextLabel">

            <EditText
                android:id="@+id/register_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/email"
                android:ems="12"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/RegisterTextLabel">

            <EditText
                android:id="@+id/register_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:ems="12"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/RegisterTextLabel">

            <EditText
                android:id="@+id/register_confirm_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textColor="@color/white"
                android:ems="12"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/signup_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/white"
                android:text="@string/next"
                android:textColor="?attr/colorAccent" />
        </RelativeLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/login_cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="56dp">
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/register_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="@dimen/fab_margin"
            android:tint="@color/white"
            android:src="@drawable/plus_icon" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login_caps"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textSize="26sp"/>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:ems="12"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:ems="12"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/login_button_selected"
                android:layout_width="106dp"
                android:layout_height="46dp"
                android:background="?attr/colorAccent"
                android:text="@string/ok"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/white"
                android:text="@string/next"
                android:textColor="?attr/colorAccent" />
        </RelativeLayout>

        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
